--- a/generalDashboard/dashboard.html
+++ b/generalDashboard/dashboard.html
@@ -323,7 +323,7 @@
                 <div class="col-lg-4">
 
                     <!-- Top People -->
-                    <div class="card">
+                    <div class="card" style="overflow-y: scroll; height: 20rem;">
                         <div class="filter">
                             <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -334,6 +334,21 @@
                                 <li><a class="dropdown-item" href="#">Today</a></li>
                                 <li><a class="dropdown-item" href="#">This Month</a></li>
                                 <li><a class="dropdown-item" href="#">This Year</a></li>
+                                <li class="dropdown-header text-start mt-2">
+                                    <h6>category</h6>
+                                </li>
+                                <div class="form-check m-2">
+                                    <input class="form-check-input" type="checkbox" id="changesMade" checked>
+                                    <label class="form-check-label" for="changesMade">
+                                        Entrepreneur
+                                    </label>
+                                </div>
+                                <div class="form-check m-2">
+                                    <input class="form-check-input" type="checkbox" id="changesMade" checked>
+                                    <label class="form-check-label" for="changesMade">
+                                        Professional
+                                    </label>
+                                </div>
                             </ul>
                         </div>
 
